--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,10 +1,15 @@
-
 Welcome to Bitbridge Global
-===============================================
 
-   YOu have successfully signed up to Bit Bridge Globbal Trading platform
-      <%= @user.email %>.<br>
+Hello <%= @user.user_profile.first_name %>,
 
- log in to complete you sign up, follow this link: <%= @url %>.
+Thank you for registering with Bitbridge Global. Please confirm your email address to complete your account setup.
 
-Thanks for joining and have a great day!
+Confirm your email by visiting this link:
+<%= @confirmation_url %>
+
+If you didn't request this, please ignore this email.
+
+---
+© <%= Time.current.year %> <%= @app_name %>. All rights reserved.
+<%= @app_name %>
+<%= @company_address %>
