--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -2,18 +2,76 @@
 <html>
 
 <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <style>
+        /* Email styles need to be inline */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .header {
+            background-color: #f8f8f8;
+            padding: 20px;
+            text-align: center;
+            border-bottom: 1px solid #e7e7e7;
+        }
+
+        .content {
+            padding: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            margin: 20px 0;
+        }
+
+        .footer {
+            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 1px solid #e7e7e7;
+            font-size: 12px;
+            color: #777;
+        }
+    </style>
 </head>
 
 <body>
-    <h2>Welcome to Bitbridge Global.com</h2>
-    <p>
-        You have successfully signed up to Bit Bridge Globbal Trading platform: <%= @user.email %>.<br>
-    </p>
-    <p>
-        log in to complete you sign up, follow this link: <%= @url %>.
-    </p>
-    <p>Thanks for joining and have a great day!</p>
+    <div class="header">
+        <h1>Welcome to Bitbridge Global </h1>
+    </div>
+
+    <div class="content">
+        <p>Hello <%= @user.user_profile.first_name %>,</p>
+
+        <p>Thank you for registering with Bitbridge Global. Please confirm your email address to complete your account setup.</p>
+
+        <p>
+            <a href="<%= @confirmation_url %>" class="button">Confirm My Email</a>
+        </p>
+
+        <p>If the button above doesn't work, copy and paste the following link into your browser:</p>
+        <p><%= @confirmation_url %></p>
+
+        <p>If you didn't request this, please ignore this email.</p>
+    </div>
+
+    <div class="footer">
+        <p>&copy; <%= Time.current.year %> <%= @app_name %>. All rights reserved.</p>
+        <p>
+            <%= @app_name %><br>
+            <%= @company_address %>
+        </p>
+    </div>
 </body>
 
 </html>
