--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -51,6 +51,8 @@
     </div>
 
     <div class="content">
+        <%= image_tag attachments["logo"].url, class: "logo", style:"height: 80px; display: block;",  alt: "Company Logo"  %>
+
         <p>Hello <%= @user.user_profile.first_name %>,</p>
 
         <p>Thank you for registering with Bitbridge Global. Please confirm your email address to complete your account setup.</p>
