update welcome email

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -68,7 +68,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; <%= Time.current.year %> <%= @app_name %>. All rights reserved.</p>
+        <p>&copy; <%= Time.current.year %> Bitbridge Global. All rights reserved.</p>
 
     </div>
 </body>
