--- a/app/views/order_mailer/purchase_confirmation.html.erb
+++ b/app/views/order_mailer/purchase_confirmation.html.erb
@@ -22,9 +22,10 @@
         }
 
         .logo {
-            max-width: 180px;
+            max-width: 120px;
             width: 100%;
             height: 80px;
+            background: gray
         }
 
         .content {
@@ -69,7 +70,6 @@
 <body>
     <div class="header">
         <%= image_tag attachments["logo"].url, class: "logo", style:"height: 80px; display: block;",  alt: "Company Logo"  %>
-
         <h1>Purchase Confirmation</h1>
     </div>
 
