--- a/app/views/order_mailer/purchase_confirmation.html.erb
+++ b/app/views/order_mailer/purchase_confirmation.html.erb
@@ -17,6 +17,7 @@
         .header {
             padding: 20px;
             text-align: center;
+            background: #333333;
             color: white;
             border-radius: 5px 5px 0 0;
         }
