--- a/app/views/user_mailer/login_alert.html.erb
+++ b/app/views/user_mailer/login_alert.html.erb
@@ -53,7 +53,7 @@
     <h2>New Login Detected</h2>
     <%= image_tag attachments["logo"].url, class: "logo", style:"height: 80px; display: block;",  alt: "Company Logo"  %>
 
-    <p>Hello <%= @user.user_profile.last_name || @user.email %>,</p>
+    <p>Hello <%= @user.user_profile&.last_name || @user.email %>,</p>
 
     <p>We noticed a new login to your <strong>BitBridge Global</strong>:</p>
 
